--- a/css/fanhub.css
+++ b/css/fanhub.css
@@ -17,3 +17,8 @@ body {
 section {background-color: white}
 .section-header {border-bottom: 2px solid grey;}
 
+button {
+    background-color: transparent;
+    border: none;
+}
+
