Fixed css on profile page for new mockups

--- a/views/postcomponent.html
+++ b/views/postcomponent.html
@@ -1,6 +1,5 @@
 <div class="w3-card w3-row" id="tmplPost" style="display: none">
     <div class="w3-two-thirds">
-        <input name="postid" id="postid" type="hidden"/>
         <div id="text" style="word-wrap: break-word">
             This is my first message
         </div>
@@ -19,25 +18,17 @@
         </div>
         <div id="tags"></div>
         <nav class="w3-topnav">
-            <button onclick="btnLikePost();">
-                <i class="fa fa-heart-o btnLikePost"></i>
-            </button>
-            <span id="likecount">0</span>
-            <span id="share">
-                <button onclick="btnSharePost();">
-                    <i class="fa fa-retweet btnSharePost"></i></a>
-                    <span id="sharecount">0</span>
-                </button>
+            <a href="#"><i class="fa fa-heart-o btnLikePost"></i></a><span id="likecount">0</span>
+            <span id="share"><a href="#"><i class="fa fa-retweet btnSharePost"></i></a>
+                <span id="likecount">0</span>
             </span>
-            <button onclick="btnCommentPost(this);">
-                <i class="fa fa-comment btnCommentPost"></i>
-            </button>
-            <span id="commentcount">0</span>
-            <button onclick="btnDeletePost(this);"><i class="fa fa-trash btnDeletePost"></i></button>
+            <a href="#"><i class="fa fa-comment btnCommentPost"></i></a><span id="commentcount">0</span>    
         </nav>
         <div id="comments"></div>
     </div>
-</div>        
+</div>
+
+
 <div id="mdlComment" class="w3-modal">
     <input type="hidden" id="postid" name="postid" class="w3-input"/>
     <div class="w3-modal-content">
@@ -58,3 +49,79 @@
         <div class="w3-threequarter" id="text"></div>
     </div>
 </div>
+<script>
+var rxurl = /(http|ftp|https):\/\/[\w\-_]+(\.[\w\-_]+)+([\w\-\.,@?^=%&amp;:\/~\+#]*[\w\-\@?^=%&amp;\/~\+#])?/g;
+
+function populatePostList(list, data, currentUser){
+    populateList(list, data, $("#tmplPost"), function (newPost, record) {
+        var postid = record["postid"];
+        newPost.attr("id", "tmplPost" + postid);
+        var blogtext = decodeURIComponent(record["text"]);
+        newPost.find("#text").html(blogtext.replace(rxurl, function foo(x) { return '<a href="' + x + '">Link</a>' }));
+        if (record["liked"] == "1") {
+            newPost.find(".btnLikePost").addClass("fa-heart");
+            newPost.find(".btnLikePost").removeClass("fa-heart-o");
+        }        
+        getComments(postid, function (comments) {
+            populateList(newPost.find("#comments"), comments, $("#tmplComment"), null, "./uploads/");
+            console.log(comments);
+        });
+    }, "./uploads/")
+}
+
+if (!String.prototype.startsWith) {
+  String.prototype.startsWith = function(searchString, position) {
+    position = position || 0;
+    return this.indexOf(searchString, position) === position;
+  };
+}
+
+function findParent(node, id){
+    var parentFound = false;    
+    while(node != null && ! parentFound) {
+        if (node.attr("id") != undefined)
+            parentFound = node.attr("id").startsWith(id);
+        if(! parentFound)
+            node = node.parent();
+    }        
+    return node
+}
+
+function btnSharePost() {
+    console.log("post shared");
+}
+
+function btnDeletePost(element) {
+    console.log("post deleted");
+    var currentPost = findParent($(element), "tmplPost");
+    var postid = currentPost.find("#postid").val();
+    deletePost(postid, function (res) {
+        console.log(res);
+        currentPost.hide();
+    })
+    return false;
+}
+
+function btnLikePost() {
+    console.log("post liked");
+}
+
+function btnCommentPost(element) {
+    console.log("post commented");
+    var currentPost = findParent($(element), "tmplPost");
+    $("#mdlComment").find("#postid").val(currentPost.find("#postid").val());    
+    $("#mdlComment").show();
+    return false;
+}
+
+function btnSubmitComment() {
+    $("#mdlComment").hide();
+    putComment(inputs2json($("#mdlComment")), function (newCommentRecord) {
+        var newCommentDiv = cloneDiv($("#tmplComment"), newCommentRecord, "./uploads/");
+        console.log(newCommentDiv);
+        newCommentDiv.show();
+        newCommentDiv.attr("id", "tmplComment" + newCommentRecord["commentid"]);
+        $("#tmplPost" + newCommentRecord["postid"]).find("#comments").append(newCommentDiv);
+    })
+}
+</script>
