--- a/views/postcomponent.html
+++ b/views/postcomponent.html
@@ -1,7 +1,8 @@
 <div class="w3-card w3-row" id="tmplPost" style="display: none">
     <div class="w3-two-thirds">
+        <input type="hidden" name="postid" id="postid"/>
         <div id="text" style="word-wrap: break-word">
-            This is my first message
+            Text
         </div>
         <div>
             <img id="image" src="./images/100x100.jpg" alt="post image" style="max-width:90%; display: none"/>
@@ -18,16 +19,15 @@
         </div>
         <div id="tags"></div>
         <nav class="w3-topnav">
-            <a href="#"><i class="fa fa-heart-o btnLikePost"></i></a><span id="likecount">0</span>
-            <span id="share"><a href="#"><i class="fa fa-retweet btnSharePost"></i></a>
-                <span id="likecount">0</span>
-            </span>
-            <a href="#"><i class="fa fa-comment btnCommentPost"></i></a><span id="commentcount">0</span>    
+            <button id="btnLikePost"><i class="fa fa-heart-o" onclick="btnLikePost(this);"></i></a><span id="likecount">0</button>
+            <button id="btnSharePost"><i class="fa fa-retweet" onclick="btnSharePost(this);"></i></button><span id="sharecount">0</span>                           
+            <button id="btnCommentPost"><i class="fa fa-comment" onclick="btnCommentPost(this);"></i></button><span id="commentcount">0</span>    
+            <button id="btnDeletePost"><i class="fa fa-trash" onclick="btnDeletePost(this);"></i></button>
+            <button id="btnEditPost"><i class="fa fa-pencil" onclick="btnEditPost(this);"></i></button>
         </nav>
         <div id="comments"></div>
     </div>
 </div>
-
 
 <div id="mdlComment" class="w3-modal">
     <input type="hidden" id="postid" name="postid" class="w3-input"/>
@@ -39,6 +39,7 @@
         </div>
     </div>
 </div>
+
 <div id="tmplComment">
     <input name="commentid" id="commentid" type="hidden"/>
     <div class="w3-row">
@@ -49,79 +50,52 @@
         <div class="w3-threequarter" id="text"></div>
     </div>
 </div>
-<script>
-var rxurl = /(http|ftp|https):\/\/[\w\-_]+(\.[\w\-_]+)+([\w\-\.,@?^=%&amp;:\/~\+#]*[\w\-\@?^=%&amp;\/~\+#])?/g;
+<div id="frmPost" class="w3-card-4" style="display: none">  
+    <div id="tmplPostForm" class="w3-row-padding w3-light-grey">
+        <h4>New Post</h4>
+        <textarea class="w3-input" id="text" name="text"></textarea>
+        <input type="hidden" id="postid" name="postid"/>
+        <nav class="w3-topnav">
+            <a href="#">
+                <i class="fa fa-file-image-o fileselect">Image
+                </i>
+                <input type="file" id="image" name="image" accept ="image/*" class="upload" style="display: none"/> 
+            </a>
+            <a href="#">
+                <i class="fa fa-file-video-o fileselect">Video
+                </i>
+                <input type="file" id="video" name="video" accept ="video/*" style="display: none" class="video upload"/>                                     </a>
+            <a href="#">
+                <i class="fa fa-file-audio-o fileselect">Audio
+                </i>
+                <input type="file" id="audio" name="audio" accept ="audio/*" style="display: none" class="audio upload"/>     
+            </a>
+        </nav>                            
+        <div>
+            <img src="./images/100x100.jpg" alt="Prevew Image" id="preview-image" 
+                style="display:none" width="100px" height="100px"/>
+        </div>
+        <div>
+            <video width="128" height="96" controls style="display:none" id="preview-video">
+                <source src="">
+            </video>
+        </div>
+        <div>
+            <audio controls style="display:none" id="preview-audio">
+                <source src="">
+            </audio>
+        </div>
+        <div id="lstTags">                                                                
+        </div>
+        <div id="tmplTag" style="display: none">
+            <input type="checkbox" name="tags"class="w3-check" id="tmplTag">&nbsp;
+            <label>Tag</label>&nbsp;
+        </div>    
+        <button class="btn btn-primary pull-right w3-grey" id="btnSubmitPost">Post</button>
+    </div>
+</div>    
 
-function populatePostList(list, data, currentUser){
-    populateList(list, data, $("#tmplPost"), function (newPost, record) {
-        var postid = record["postid"];
-        newPost.attr("id", "tmplPost" + postid);
-        var blogtext = decodeURIComponent(record["text"]);
-        newPost.find("#text").html(blogtext.replace(rxurl, function foo(x) { return '<a href="' + x + '">Link</a>' }));
-        if (record["liked"] == "1") {
-            newPost.find(".btnLikePost").addClass("fa-heart");
-            newPost.find(".btnLikePost").removeClass("fa-heart-o");
-        }        
-        getComments(postid, function (comments) {
-            populateList(newPost.find("#comments"), comments, $("#tmplComment"), null, "./uploads/");
-            console.log(comments);
-        });
-    }, "./uploads/")
-}
-
-if (!String.prototype.startsWith) {
-  String.prototype.startsWith = function(searchString, position) {
-    position = position || 0;
-    return this.indexOf(searchString, position) === position;
-  };
-}
-
-function findParent(node, id){
-    var parentFound = false;    
-    while(node != null && ! parentFound) {
-        if (node.attr("id") != undefined)
-            parentFound = node.attr("id").startsWith(id);
-        if(! parentFound)
-            node = node.parent();
-    }        
-    return node
-}
-
-function btnSharePost() {
-    console.log("post shared");
-}
-
-function btnDeletePost(element) {
-    console.log("post deleted");
-    var currentPost = findParent($(element), "tmplPost");
-    var postid = currentPost.find("#postid").val();
-    deletePost(postid, function (res) {
-        console.log(res);
-        currentPost.hide();
-    })
-    return false;
-}
-
-function btnLikePost() {
-    console.log("post liked");
-}
-
-function btnCommentPost(element) {
-    console.log("post commented");
-    var currentPost = findParent($(element), "tmplPost");
-    $("#mdlComment").find("#postid").val(currentPost.find("#postid").val());    
-    $("#mdlComment").show();
-    return false;
-}
-
-function btnSubmitComment() {
-    $("#mdlComment").hide();
-    putComment(inputs2json($("#mdlComment")), function (newCommentRecord) {
-        var newCommentDiv = cloneDiv($("#tmplComment"), newCommentRecord, "./uploads/");
-        console.log(newCommentDiv);
-        newCommentDiv.show();
-        newCommentDiv.attr("id", "tmplComment" + newCommentRecord["commentid"]);
-        $("#tmplPost" + newCommentRecord["postid"]).find("#comments").append(newCommentDiv);
-    })
-}
-</script>
+<div id="mdlEditBox" class="w3-modal">
+    <span onclick="document.getElementById('mdlEditBox').style.display='none'" class="w3-closebtn">&times;</span>
+    <div id="mdlEditForm"></div>
+</div>
