--- a/views/postcomponent.html
+++ b/views/postcomponent.html
@@ -20,20 +20,20 @@
             </a>
         </nav>                            
         <div>
-            <img src="./images/100x100.jpg" alt="Prevew Image" id="preview-image" 
+            <img src="./images/100x100.jpg" alt="Prevew Image" id="preview_image" class="preview"
                 style="display:none" width="100px" height="100px"/>
         </div>
         <div>
-            <video width="128" height="96" controls style="display:none" id="preview-video">
+            <video width="128" height="96" controls style="display:none" id="preview_video" class="preview">
                 <source src="">
             </video>
         </div>
         <div>
-            <audio controls style="display:none" id="preview-audio">
+            <audio controls style="display:none" id="preview_audio" class="preview">
                 <source src="">
             </audio>
         </div>
-        <div id="lstTags">                                                                
+        <div id="lstTags" class="tags">                                                                
         </div>
         <div id="tmplTag" style="display: none">
             <input type="checkbox" name="tags"class="w3-check" id="tmplTag">&nbsp;
@@ -98,46 +98,62 @@
 
 <div id="mdlEditBox" class="w3-modal">
     <span onclick="document.getElementById('mdlEditBox').style.display='none'" class="w3-closebtn">&times;</span>
-    <div id="EditForm" class="w3-row-padding w3-light-grey">
-        <h4>New Post</h4>
+    <div id="frmEdit" class="w3-row-padding w3-light-grey">
+        <h4>Edit Post</h4>
         <textarea class="w3-input" id="text" name="text"></textarea>
         <input type="hidden" id="postid" name="postid"/>
         <nav class="w3-topnav">
             <a href="#">
                 <i class="fa fa-file-image-o fileselect">Image
                 </i>
-                <input type="file" id="imageupload" name="imageupload" accept ="image/*" class="upload" style="display: none"/> 
+                <input type="file" id="image_edit" name="image_edit" accept ="image/*" class="upload" style="display: none"/> 
             </a>
             <a href="#">
                 <i class="fa fa-file-video-o fileselect">Video
                 </i>
-                <input type="file" id="videoupload" name="videoupload" accept ="video/*" style="display: none" class="video upload"/>                                     </a>
+                <input type="file" id="video_edit" name="video_edit" accept ="video/*" style="display: none" class="video upload"/>                                     </a>
             <a href="#">
                 <i class="fa fa-file-audio-o fileselect">Audio
                 </i>
-                <input type="file" id="audioupload" name="audioupload" accept ="audio/*" style="display: none" class="audio upload"/>     
+                <input type="file" id="audio_edit" name="audio_edit" accept ="audio/*" style="display: none" class="audio upload"/>     
             </a>
         </nav>                       
         <div>
-            <img src="./images/100x100.jpg" alt="Prevew Image" id="image" 
+            <img src="" alt="Prevew Image" id="preview_image_edit" class="preview" 
                 style="display:none" width="100px" height="100px"/>
         </div>
         <div>
-            <video width="128" height="96" controls style="display:none" id="video">
+            <video width="128" height="96" controls style="display:none" id="preview_video_edit" class="preview">
                 <source src="">
             </video>
         </div>
         <div>
-            <audio controls style="display:none" id="audio">
+            <audio controls style="display:none" id="preview_audio_edit" class="preview">
                 <source src="">
             </audio>
         </div>
-        <div id="lstTags">                                                                
+        <div id="lstTags" class="tags">                                                                
         </div>
         <div id="tmplTag" style="display: none">
             <input type="checkbox" name="tags"class="w3-check" id="tmplTag">&nbsp;
             <label>Tag</label>&nbsp;
         </div>    
-        <button class="btn btn-primary pull-right w3-grey" id="btnSubmitPost">Post</button>
+        <button class="btn btn-primary pull-right w3-grey" id="btnSubmitEdit" onclick="btnSubmitEdit()">Submit</button>
     </div>
 </div>       
+
+<div id="mdlShare" class="w3-modal">
+    <div class="w3-modal-content" style="width: 500px">
+        <div class="w3-container">
+            <span onclick="$('#mdlShare').hide();" class="w3-closebtn">&times</span>
+            <p>Share This Post</p>
+            <textarea cols="50" class="w3-input w3-border" id="text" name="text"></textarea><br/>
+            <input type="hidden" class="w3-input" id="post_shared" name="post_shared"/>
+            <button id="btnSubmitShare" class="w3-btn">Submit</button>
+        </div>
+        <div id="posttext"></div>
+        <div>
+            <img id="postimage" alt="share image" src="./images/100x100.jpg" style="display: none; max-width: 100%"/>
+        </div>
+    </div>
+</div>
